[package]
name = "nix-cache"
version = "0.1.0"
authors = ["Rémy Grünblatt <remy@grunblatt.org>"]
edition = "2018"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
bytes = "1"
reqwest = { version = "0.11.3", features = ["blocking", "json"] }
regex = "1"
lazy_static = "1.4.0"